syntax = "proto3";

package auth;
option go_package = "/";
service AuthService {
  rpc Login (LoginReq) returns (LoginRes) {}
}

message LoginReq {
  string name = 1;
  string password=2;
  string phone=3;
}

message LoginRes {
  string message = 1;
}